[gd_scene load_steps=13 format=3 uid="uid://xvygonmfwal2"]

[ext_resource type="Script" path="res://categorys/apartment/menu/menu.gd" id="1_uq27k"]
[ext_resource type="Texture2D" uid="uid://b3t2ytl32tv2m" path="res://categorys/apartment/menu/menu_bg.jpg" id="2_7afsy"]
[ext_resource type="SpineSkeletonDataResource" uid="uid://gun6ki8nkyxt" path="res://categorys/apartment/menu/spine/toilet.tres" id="3_05gpe"]
[ext_resource type="Texture2D" uid="uid://brlcx2erf54ob" path="res://image/setting.png" id="4_jryh7"]
[ext_resource type="Script" path="res://common/common_button.gd" id="5_sul5q"]
[ext_resource type="PackedScene" uid="uid://c2hckrk53snne" path="res://common/return/return_button.tscn" id="6_o27jh"]
[ext_resource type="Texture2D" uid="uid://bcw7eptj1qgoh" path="res://categorys/apartment/menu/select_rooms/select_room_a.png" id="7_ta0d5"]
[ext_resource type="Texture2D" uid="uid://c58ggahgwm0pk" path="res://categorys/apartment/menu/select_rooms/select_room_b.png" id="8_t62f3"]
[ext_resource type="Texture2D" uid="uid://bx86vseqt28ei" path="res://categorys/apartment/menu/select_rooms/select_room_c.png" id="9_ax2a3"]
[ext_resource type="Texture2D" uid="uid://ckhkl1an162wh" path="res://categorys/apartment/menu/select_rooms/select_room_d.png" id="10_5cyfy"]
[ext_resource type="Texture2D" uid="uid://cjc16ska1fl1r" path="res://categorys/apartment/menu/select_rooms/select_room_e.png" id="11_aldum"]
[ext_resource type="PackedScene" uid="uid://cxxejc615wwp5" path="res://categorys/apartment/menu/menu_btn/menu_btn.tscn" id="12_65nh0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uq27k")

[node name="BG" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7afsy")
expand_mode = 1

[node name="SpineBG" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="SpineSprite" type="SpineSprite" parent="SpineBG"]
skeleton_data_res = ExtResource("3_05gpe")
preview_skin = "Default"
preview_animation = "toilet_a"
preview_frame = false
preview_time = 0.0

[node name="SettingButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = 26.0
offset_right = -27.0
offset_bottom = 100.0
grow_horizontal = 0
icon = ExtResource("4_jryh7")
flat = true
script = ExtResource("5_sul5q")

[node name="ReturnButton" parent="." instance=ExtResource("6_o27jh")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -100.0
offset_right = 0.0
grow_horizontal = 0

[node name="SelectRoom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_ta0d5")
expand_mode = 1

[node name="SelectRoom2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_t62f3")
expand_mode = 1

[node name="SelectRoom3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_ax2a3")
expand_mode = 1

[node name="SelectRoom4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_5cyfy")
expand_mode = 1

[node name="SelectRoom5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_aldum")
expand_mode = 1

[node name="MenuBtn" parent="." instance=ExtResource("12_65nh0")]
layout_mode = 0
offset_left = 92.0
offset_top = 235.0
offset_right = 402.0
offset_bottom = 947.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuBtn2" parent="." instance=ExtResource("12_65nh0")]
layout_mode = 0
offset_left = 465.0
offset_top = 235.0
offset_right = 769.0
offset_bottom = 954.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuBtn3" parent="." instance=ExtResource("12_65nh0")]
layout_mode = 0
offset_left = 830.0
offset_top = 235.0
offset_right = 1139.0
offset_bottom = 946.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuBtn4" parent="." instance=ExtResource("12_65nh0")]
layout_mode = 0
offset_left = 1199.0
offset_top = 235.0
offset_right = 1503.0
offset_bottom = 954.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuBtn5" parent="." instance=ExtResource("12_65nh0")]
layout_mode = 0
offset_left = 1567.0
offset_top = 235.0
offset_right = 1871.0
offset_bottom = 963.0
grow_horizontal = 1
grow_vertical = 1

[node name="lightMask" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
